# CalculatorQTExample

./: CMakeLists.txt  README.md
.cache/clangd/index/: First.cpp.828969826B2759EB.idx  calcfunc.h.60F3C61D41895BF5.idx  ui_calcmainwindow.h.3AF865F96F4257F8.idx
include/: calcfunc.h  ui_calcmainwindow.h
src/: First.cpp  calcfunc.cpp  calcmainwindow.ui
